examples/test/testpolicy10139.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10139
  namespace: namespace456
spec:
  podSelector:
    matchLabels:
      key17: value47
      key30: value3
      key2: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value39
          key1: value3
          key40: value14
      podSelector:
        matchLabels:
          key14: value1
          key7: value48
          key39: value38
